--- a/res/layout/game_manager_list.xml
+++ b/res/layout/game_manager_list.xml
@@ -3,7 +3,8 @@
     android:id="@+id/manage_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="8dp" >
 
     <TextView
         android:id="@+id/gm_lab"
